# alphagenome

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  model.py  pyproject.toml  sequence_encoder.py
.github/actions/setup-python-env/: action.yaml
.github/workflow/: main.yaml
src/alpahgenome/: sequence_encoder.py
src/alphagenome/: main.py  model.py  sequence_encoder.py  utils.py
tests/: test_model.py  test_sequence_encoder.py
