[project]
name = "alphagenome"
version = "0.1.0"
description = "Alphagenome implementation in Pytorch"
authors = [
    { name="Zeinab Sheikhi", email="zeinab.sheykhie@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch",
    "numpy",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphagenome"]